Fixed fucking scrollbar skibidi dop dop yes yes

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -29,6 +29,7 @@
 		--bg-primary: 0, 0, 0;
 		--bg-secondary: 249, 250, 251;
 		--bg-tertiary: 234, 236, 240;
+		--bg-gray-fill-light: 249, 250, 251;
 
 		--border-strong: 208, 213, 221;
 		--border-mid: 234, 236, 240;
